# ValueCalcer

./: .gitignore  App.tsx  README.md  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
.github/agents/: dev-server.agent.md  release.agent.md
.github/instructions/: shared.instructions.md  web.instructions.md
.github/prompts/: add-unit.prompt.md
.github/workflows/: release.yml
__tests__/: calculators.test.ts
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/valuecalcer/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
scripts/: release-android.sh  release-linux.sh  release-windows.ps1  sync-versions.js
shared/: calculators.ts  theme.ts  types.ts
src/components/: CurrencySelector.tsx  ProductCard.tsx  UnitSelector.tsx
src/screens/: HomeScreen.tsx
src/theme/: index.ts
src/types/: index.ts
src/utils/: index.ts
web/: next.config.js  package-lock.json  package.json  tailwind.config.js
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/src/: main.rs
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AddButton.tsx  CurrencySelector.tsx  ProductCard.tsx  ThemeInjector.tsx  UnitSelector.tsx
web/src/types/: index.ts
web/src/utils/: index.ts
