[package]
name = "value-calcer"
version = "1.0.0"
description = "ValueCalcer - Compare product value for money"
authors = ["ValueCalcer"]
license = ""
repository = ""
default-run = "value-calcer"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
