[package]
name = "value-calcer"
version = "1.0.0"
description = "ValueCalcer - Compare product value for money"
authors = ["ValueCalcer"]
license = ""
repository = ""
default-run = "value-calcer"
edition = "2021"
rust-version = "1.77"

[lib]
name = "value_calcer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
